--- a/build.gradle
+++ b/build.gradle
@@ -10,10 +10,11 @@ repositories {
 }
 
 dependencies {
+    implementation 'com.google.code.gson:gson:2.8.6'
+
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
 }
-
 test {
     useJUnitPlatform()
 }
